#project(ccsds_malc_plusdds)

#TODO:add_subdirectory (mal) and other should be better instance's of below.

include_directories(
    mal/include
    malactor/include
    malattributes/include
    malbinary/include
    malsplitbinary/include
    maltcp/include
    malzmq/include
    util/include
)

# Set SOURCES variable
set(SOURCES
    mal/include/mal_library.h
    mal/include/mal.h
    mal/include/mal_blob_list.h
    mal/include/mal_boolean_list.h
    mal/include/mal_ctx.h
    mal/include/mal_decoder.h
    mal/include/mal_double_list.h
    mal/include/mal_duration_list.h
    mal/include/mal_element_holder.h
    mal/include/mal_encoder.h
    mal/include/mal_endpoint.h
    mal/include/mal_entitykey.h
    mal/include/mal_entitykey_list.h
    mal/include/mal_entityrequest.h
    mal/include/mal_entityrequest_list.h
    mal/include/mal_file.h
    mal/include/mal_file_list.h
    mal/include/mal_finetime_list.h
    mal/include/mal_float_list.h
    mal/include/mal_idbooleanpair.h
    mal/include/mal_idbooleanpair_list.h
    mal/include/mal_identifier_list.h
    mal/include/mal_integer_list.h
    mal/include/mal_interactiontype_list.h
    mal/include/mal_long_list.h
    mal/include/mal_message.h
    mal/include/mal_namedvalue.h
    mal/include/mal_namedvalue_list.h
    mal/include/mal_octet_list.h
    mal/include/mal_pair.h
    mal/include/mal_pair_list.h
    mal/include/mal_poller.h
    mal/include/mal_qoslevel_list.h
    mal/include/mal_routing.h
    mal/include/mal_sessiontype_list.h
    mal/include/mal_short_list.h
    mal/include/mal_string_list.h
    mal/include/mal_subscription.h
    mal/include/mal_subscription_list.h
    mal/include/mal_time_list.h
    mal/include/mal_uinteger_list.h
    mal/include/mal_ulong_list.h
    mal/include/mal_uoctet_list.h
    mal/include/mal_updateheader.h
    mal/include/mal_updateheader_list.h
    mal/include/mal_updatetype_list.h
    mal/include/mal_uri_list.h
    mal/include/mal_ushort_list.h
    mal/src/mal.c
    mal/src/mal_blob_list.c
    mal/src/mal_boolean_list.c
    mal/src/mal_ctx.c
    mal/src/mal_decoder.c
    mal/src/mal_double_list.c
    mal/src/mal_duration_list.c
    mal/src/mal_element_holder.c
    mal/src/mal_encoder.c
    mal/src/mal_endpoint.c
    mal/src/mal_entitykey.c
    mal/src/mal_entitykey_list.c
    mal/src/mal_entityrequest.c
    mal/src/mal_entityrequest_list.c
    mal/src/mal_file.c
    mal/src/mal_file_list.c
    mal/src/mal_finetime_list.c
    mal/src/mal_float_list.c
    mal/src/mal_idbooleanpair.c
    mal/src/mal_idbooleanpair_list.c
    mal/src/mal_identifier_list.c
    mal/src/mal_integer_list.c
    mal/src/mal_interactiontype_list.c
    mal/src/mal_long_list.c
    mal/src/mal_message.c
    mal/src/mal_namedvalue.c
    mal/src/mal_namedvalue_list.c
    mal/src/mal_octet_list.c
    mal/src/mal_pair.c
    mal/src/mal_pair_list.c
    mal/src/mal_poller.c
    mal/src/mal_qoslevel_list.c
    mal/src/mal_routing.c
    mal/src/mal_sessiontype_list.c
    mal/src/mal_short_list.c
    mal/src/mal_string_list.c
    mal/src/mal_subscription.c
    mal/src/mal_subscription_list.c
    mal/src/mal_time_list.c
    mal/src/mal_uinteger_list.c
    mal/src/mal_ulong_list.c
    mal/src/mal_uoctet_list.c
    mal/src/mal_updateheader.c
    mal/src/mal_updateheader_list.c
    mal/src/mal_updatetype_list.c
    mal/src/mal_uri_list.c
    mal/src/mal_ushort_list.c
    malactor/include/mal_actor.h
    malactor/include/malactor.h
    malactor/src/mal_actor.c
    malactor/src/malactor.c
    malattributes/include/mal_attribute.h
    malattributes/include/mal_blob.h
    malattributes/include/mal_identifier.h
    malattributes/include/mal_string.h
    malattributes/include/mal_uri.h
    malattributes/include/malattributes.h
    malattributes/src/mal_attribute.c
    malattributes/src/mal_blob.c
    malattributes/src/mal_identifier.c
    malattributes/src/mal_string.c
    malattributes/src/mal_uri.c
    malbinary/include/malbinary.h
    malbinary/include/malbinary_decoder.h
    malbinary/include/malbinary_encoder.h
    malbinary/src/malbinary.c
    malbinary/src/malbinary_decoder.c
    malbinary/src/malbinary_encoder.c
    malsplitbinary/include/malsplitbinary.h
    malsplitbinary/include/malsplitbinary_decoder.h
    malsplitbinary/include/malsplitbinary_encoder.h
    malsplitbinary/src/malsplitbinary.c
    malsplitbinary/src/malsplitbinary_decoder.c
    malsplitbinary/src/malsplitbinary_encoder.c
    maltcp/include/maltcp.h
    maltcp/include/maltcp_ctx.h
    maltcp/include/maltcp_header.h
    maltcp/src/maltcp.c
    maltcp/src/maltcp_ctx.c
    maltcp/src/maltcp_header.c
    malzmq/include/malzmq.h
    malzmq/include/malzmq_ctx.h
    malzmq/include/malzmq_header.h
    malzmq/src/malzmq.c
    malzmq/src/malzmq_ctx.c
    malzmq/src/malzmq_header.c
    util/include/clog.h
    util/src/clog.c
    moMalDDS.cpp
)



# Set HEADERS_PUBLIC variable (public headers, included in the library)
set(HEADERS_PUBLIC
    mal/include/mal.h
    mal/include/mal_blob_list.h
    mal/include/mal_boolean_list.h
    mal/include/mal_ctx.h
    mal/include/mal_decoder.h
    mal/include/mal_double_list.h
    mal/include/mal_duration_list.h
    mal/include/mal_element_holder.h
    mal/include/mal_encoder.h
    mal/include/mal_endpoint.h
    mal/include/mal_entitykey.h
    mal/include/mal_entitykey_list.h
    mal/include/mal_entityrequest.h
    mal/include/mal_entityrequest_list.h
    mal/include/mal_file.h
    mal/include/mal_file_list.h
    mal/include/mal_finetime_list.h
    mal/include/mal_float_list.h
    mal/include/mal_idbooleanpair.h
    mal/include/mal_idbooleanpair_list.h
    mal/include/mal_identifier_list.h
    mal/include/mal_integer_list.h
    mal/include/mal_interactiontype_list.h
    mal/include/mal_long_list.h
    mal/include/mal_message.h
    mal/include/mal_namedvalue.h
    mal/include/mal_namedvalue_list.h
    mal/include/mal_octet_list.h
    mal/include/mal_pair.h
    mal/include/mal_pair_list.h
    mal/include/mal_poller.h
    mal/include/mal_qoslevel_list.h
    mal/include/mal_routing.h
    mal/include/mal_sessiontype_list.h
    mal/include/mal_short_list.h
    mal/include/mal_string_list.h
    mal/include/mal_subscription.h
    mal/include/mal_subscription_list.h
    mal/include/mal_time_list.h
    mal/include/mal_uinteger_list.h
    mal/include/mal_ulong_list.h
    mal/include/mal_uoctet_list.h
    mal/include/mal_updateheader.h
    mal/include/mal_updateheader_list.h
    mal/include/mal_updatetype_list.h
    mal/include/mal_uri_list.h
    mal/include/mal_ushort_list.h

)


#include(${PROJECT_SOURCE_DIR}/cmake/LibraryConfig.cmake)
